# euro_currency

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: currency_ratio.h  main_window.h
source/: currency_ratio.cpp  main_window.cpp
